2006-10-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_10,
	gramps_upgrade_11): Properly use TXN.	

2006-10-09  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py (has_object_handle): Typo.

2006-10-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix object importation

2006-10-09  Alex Roitman  <shura@gramps-project.org>
	* src/ReportBase/_BareReportDialog.py (setup_title): Set name to
	empty string if no person is available.
	* src/ReportBase/_ReportDialog.py (get_header): Make meaningful
	title for the header when name is empty.
	* src/FilterEditor/_FilterEditor.py (close): Allow more arguments.

2006-10-09  Don Allingham  <don@gramps-project.org>
	* src/Selectors/_SelectPerson.py: enable toggle button to display all
	* src/glade/gramps.glade: add toggle button
	* src/Editors/_EditPerson.py: add person's name to title
	* src/RelLib/_Name.py: add empty check

2006-10-08  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetAncestralReport.py: fix DAR-Endnotes indent
	* src/plugins/DetDescendantReport.py: fix DDR-Endnotes indent

2006-10-08  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: error message on disk space full
	* src/Bookmarks.py: removed deleted items
	* src/Editors/_EditReference.py: call cancel_and_close on window
	cancel
	* src/DisplayTabs/_SourceRefModel.py: remove debug 
	* src/DisplayTabs/_EmbeddedList.py: remove debug 

2006-10-08  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditPlace.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditPersonRef.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditPerson.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditName.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditMediaRef.py (_create_tabbed_pages): Fix sources.
	* src/Editors/_EditMedia.py (_create_tabbed_pages): Fix sources.