@@ -1,3 +1,6 @@
+2006-10-10  Don Allingham  <don@gramps-project.org>
+	* src/gramps_main.py: use pngs for windows
+
 2006-10-10  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_10,
 	gramps_upgrade_11): Properly use TXN.	
